# livraria

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: models.py  serializers.py  views.py
livraria/migrations/: 0002_autor_editora_livro.py
